--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,7 @@ phases:
       - IMAGE_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG"
       - echo Repository $REPO
       - docker --version
+      - systemctl status docker
       - docker pull saurabhthatte/foss-scan:aws
       - docker run saurabhthatte/foss-scan:aws https://github.com/rahuldarekar999/test-java
   build:
