--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
       - echo Repository $REPO
       - docker --version
       - docker pull saurabhthatte/foss-scan:aws
-      - docker run saurabhthatte/foss-scan:aws https://github.com/rahuldarekar999/test-java
+      - docker run saurabhthatte/foss-scan:aws https://github.com/rahuldarekar999/test-java --platform linux/amd64
   build:
     commands:
       - echo Build started on `date`
